Bug 2745: Demo Preparation Issues 2 - Fixing Print functionality taking only visible screen area

--- a/src/index.scss
+++ b/src/index.scss
@@ -39,3 +39,20 @@
 @import 'themes/dark';
 @import 'themes/green';
 @import 'themes/base/typography';
+
+::-webkit-scrollbar {
+    width: 0.3125rem;
+}
+
+::-webkit-scrollbar-track {
+    border-radius: 0.3125rem;
+}
+
+::-webkit-scrollbar-thumb {
+    background: var(--color-secondary-300);
+    border-radius: 0.625rem;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: var(--color-secondary-400);
+}
